--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="card">
         <div class="card-1">
           <div class="cars">
-            <img src="images/icon-sedans.svg" alt="sedan car icon" />
+            <img src="images/icon-sedans.svg" alt="" title="icon sedan" />
           </div>
           <h1>Sedans</h1>
           <p>
@@ -40,7 +40,7 @@
       <div class="card">
         <div class="card-2">
           <div class="cars">
-            <img src="images/icon-suvs.svg" alt="suv car icon" />
+            <img src="images/icon-suvs.svg" alt="" title="icon suv" />
           </div>
           <h1>SUVs</h1>
           <p>
@@ -53,7 +53,7 @@
       <div class="card">
         <div class="card-3">
           <div class="cars">
-            <img src="images/icon-luxury.svg" alt="luxury car icon"
+            <img src="images/icon-luxury.svg" alt="" title="icon luxury" />
           </div>
           <h1>Luxury</h1>
           <p>
